dropshot/tests/fail/bad_trait_only9.stderr
error: API trait `MyApi` must not have generics
 --> tests/fail/bad_trait_only9.rs:8:12
  |
8 | trait MyApi<'a> {
  |            ^^^^
